Update README.md for Java 12 + 13