@@ -3,6 +3,8 @@ package pl.mperor.lab.java;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
+import java.util.Locale;
+
 /**
  * Java 13 (September 2019)
  */
@@ -23,7 +25,7 @@ public class Java13 {
     @Test
     public void testStringFormatted() {
         Assertions.assertEquals("Hello World!", "Hello %s".formatted("World!"));
-        Assertions.assertEquals("Value: 0,00", "Value: %.2f".formatted(0d));
+        Assertions.assertEquals("Value: 0.00", String.format(Locale.US, "Value: %.2f", 0d));
     }
 
 }
